Fixed navbar issues on mobile

--- a/src/assets/styles/global/components/form.module.scss
+++ b/src/assets/styles/global/components/form.module.scss
@@ -1,6 +1,5 @@
 #global {
   .form {
-    padding-bottom: 10vh;
     &__content {
       display: flex;
       justify-content: space-between;
