--- a/src/assets/styles/global/components/post.module.scss
+++ b/src/assets/styles/global/components/post.module.scss
@@ -1,7 +1,6 @@
 #global {
   .post {
     padding-top: 10vh;
-    padding-bottom: 10vh;
     &__heading {
       margin-bottom: 3.2rem;
       & h4 {
