--- a/src/assets/styles/global/layouts/copyright.module.scss
+++ b/src/assets/styles/global/layouts/copyright.module.scss
@@ -1,6 +1,6 @@
 #global {
   .copyright {
-    padding-bottom: 2.4rem;
+    padding: 9.6rem 0 3.2rem 0;
     margin-top: auto;
     &__design {
       & p {
