--- a/src/assets/styles/global/pages/article.module.scss
+++ b/src/assets/styles/global/pages/article.module.scss
@@ -1,7 +1,6 @@
 #global {
   .blogpost {
     margin-top: 10vh;
-    padding-bottom: 8vh;
 
     &__image {
       width: 100%;
