--- a/src/assets/styles/global/pages/resume.module.scss
+++ b/src/assets/styles/global/pages/resume.module.scss
@@ -1,6 +1,5 @@
 #global {
   .resume {
-    padding-bottom: 8rem;
     &__heading {
       margin-bottom: 2.4rem;
       color: $color-orange;
